--- a/includes/css/style.css
+++ b/includes/css/style.css
@@ -759,7 +759,7 @@
 }
 .wc-shortcodes-pricing .wc-shortcodes-pricing-button .wc-shortcodes-button {
 	float: none;
-	margin: 0 auto;
+	margin: 0;
 }
 
 /* Secondary */
@@ -912,3 +912,42 @@ pre.pre-wrap {
 }
 
 
+/**
+ * Social Media Widget
+ * ----------------------------------------------------------------------------
+ */
+.widget_wc_shortcodes_social_icons .wc-shortcodes-social-icons {
+	text-align: center;
+}
+.widget_wc_shortcodes_social_icons .wc-shortcodes-social-icons li {
+	display: inline-block;
+	padding: 3px;
+	margin: 0;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing:    border-box;
+	box-sizing:         border-box;
+}
+.widget_wc_shortcodes_social_icons .wc-shortcodes-social-icons.wc-shortcodes-columns-8 li {
+	width: 12.5%;
+}
+.widget_wc_shortcodes_social_icons .wc-shortcodes-social-icons.wc-shortcodes-columns-7 li {
+	width: 14.28571428%;
+}
+.widget_wc_shortcodes_social_icons .wc-shortcodes-social-icons.wc-shortcodes-columns-6 li {
+	width: 16.66666666%;
+}
+.widget_wc_shortcodes_social_icons .wc-shortcodes-social-icons.wc-shortcodes-columns-5 li {
+	width: 20%;
+}
+.widget_wc_shortcodes_social_icons .wc-shortcodes-social-icons.wc-shortcodes-columns-4 li {
+	width: 25%;
+}
+.widget_wc_shortcodes_social_icons .wc-shortcodes-social-icons.wc-shortcodes-columns-3 li {
+	width: 33.33333333%;
+}
+.widget_wc_shortcodes_social_icons .wc-shortcodes-social-icons.wc-shortcodes-columns-2 li {
+	width: 50%;
+}
+.widget_wc_shortcodes_social_icons .wc-shortcodes-social-icons.wc-shortcodes-columns-1 li {
+	width: 100%;
+}
