--- a/includes/css/style.css
+++ b/includes/css/style.css
@@ -226,6 +226,7 @@
 	float: left;
 	background: #eeeeee;;
 	padding: 20px;
+	width: 100%;
 }
 .wc-shortcodes-testimonial-content:after {
 	content: "";
