--- a/includes/css/style.css
+++ b/includes/css/style.css
@@ -979,11 +979,13 @@ pre.pre-wrap {
  * jQuery Countdown styles 1.6.3.
  * ----------------------------------------------------------------------------
  */
-.wc-shortcodes-countdown.hasCountdown {
+.wc-shortcodes-countdown-bg4 {
+	margin-bottom: 20px;
+}
+.wc-shortcodes-countdown {
 	border: 1px solid #ccc;
 	background-color: #eee;
 	text-align: center;
-	margin-bottom: 20px;
 	padding-top: 10px;
 	padding-bottom: 10px;
 }
@@ -1025,11 +1027,10 @@ pre.pre-wrap {
 	font-size: 80%;
 	text-align: center;
 	border-right: 1px solid #cccccc;
-	border-left: 1px solid #eeeeee;
 }
 .wc-shortcodes-countdown .countdown_row *:last-child,
-.wc-shortcodes-countdown .countdown_row .countdown_section:last-child {
-	border-right: 1px solid #eeeeee;
+.wc-shortcodes-countdown .countdown_row:last-child {
+	border-width: 0;
 }
 .wc-shortcodes-countdown .countdown_amount {
 	font-size: 200%;
