--- a/includes/css/style.css
+++ b/includes/css/style.css
@@ -643,6 +643,9 @@
 	margin-right: 6px;
 	margin-bottom: 6px;
 }
+.wc-shortcodes-social-icons li a {
+	display: block;
+}
 .wc-shortcodes-social-icons li img {
 	max-height: 48px;
 }
