more updates to isotope posts

--- a/includes/css/style.css
+++ b/includes/css/style.css
@@ -1123,6 +1123,10 @@ pre.pre-wrap {
 	margin-top: 20px;
 	margin-bottom: 0;
 }
+.wc-shortcodes-entry-quote blockquote {
+	margin-top: 0;
+	padding: 10px 20px;
+}
 .wc-shortcodes-footer-entry-meta {
 	margin-top: 20px;
 	margin-bottom: 0;
