Better code formatting.

--- a/includes/css/style.css
+++ b/includes/css/style.css
@@ -861,7 +861,13 @@
  * ----------------------------------------------------------------------------
  */
 /* desert scheme ported from vim to google prettify */
-pre.prettyprint { display: block; background-color: #333 }
+pre.prettyprint { 
+	display: block; background-color: #333
+	overflow: auto;
+	padding: 20px;
+	white-space: pre;
+	word-wrap: normal;
+}
 pre .nocode { background-color: transparent; color: #000 }
 pre .str { color: #ffa0a0 } /* string  - pink */
 pre .kwd { color: #f0e68c; font-weight: bold }
