removed invalid css syntax

--- a/includes/css/style.css
+++ b/includes/css/style.css
@@ -224,7 +224,7 @@
 .wc-shortcodes-testimonial-content { 
 	position: relative;
 	float: left;
-	background: #eeeeee;;
+	background: #eeeeee;
 	padding: 20px;
 	width: 100%;
 }
