Style fix for isotope posts.

--- a/includes/css/style.css
+++ b/includes/css/style.css
@@ -1147,6 +1147,7 @@ pre.pre-wrap {
 .wc-shortcodes-post-box {
 	background-color: #ffffff;
 	margin-bottom: 20px;
+	padding: 0;
 }
 .wc-shortcodes-sep {
 	padding-left: 5px;
