--- a/includes/css/style.css
+++ b/includes/css/style.css
@@ -76,7 +76,7 @@
 .wc-shortcodes-accordion .wc-shortcodes-accordion-trigger.ui-state-hover { }
 .wc-shortcodes-accordion .wc-shortcodes-accordion-trigger.ui-state-active { }
 .wc-shortcodes-accordion .wc-shortcodes-accordion-trigger.ui-state-active a { }
-.wc-shortcodes-accordion .ui-accordion-content {
+.wc-shortcodes-accordion .wc-shortcodes-accordion-content {
 	padding: 20px;
 	border: 1px solid #cccccc;
 	border-top: 0px; 
