--- a/includes/css/style.css
+++ b/includes/css/style.css
@@ -722,6 +722,30 @@
 
 
 /**
+ * [wc_share]
+ * ----------------------------------------------------------------------------
+ */
+.wc-shortcodes-share-buttons ul {
+	list-style: none;
+	margin: 0;
+	padding: 0;
+}
+.wc-shortcodes-share-buttons li {
+	display: inline-block;
+	margin-right: 7px;
+}
+.wc-shortcodes-share-buttons li a {
+	display: block;
+}
+.wc-shortcodes-share-buttons li a img {
+	max-height: 36px;
+}
+.wc-shortcodes-share-buttons ul li:last-child {
+	margin-right: 0;
+}
+
+
+/**
  * [wc_skillbar]
  * ----------------------------------------------------------------------------
  */
